# S5

m_detector/: CMakeLists.txt  package.xml
m_detector/config/self/: self.yaml
m_detector/include/: types.h
m_detector/include/lidar_perception/: object.cc  object.h
m_detector/include/lidar_perception/common/: pcl_types.h
m_detector/include/lidar_perception/hm_tracker/: feature_descriptor.cc  hm_tracker.cc  hm_tracker.h  kalman_filter.cc
m_detector/include/lidar_perception/min_box/: min_box.cc  min_box.h
m_detector/include/m-detector/: DynObjCluster.h  DynObjFilter.h  Imu_GPS.h
m_detector/include/m-detector/pcl_clip/: convex_hullxy.h  pcl_clip.h
m_detector/launch/: detector_kitti.launch  evaluate.launch
m_detector/launch/self/: self_test.launch
m_detector/src/: DynObjCluster.cpp  DynObjFilter.cpp  dynfilter_with_odom.cpp  evaluate_odom.cpp  imu2odom.cpp
m_detector/src/pcl_clip/: pcl_clip.cpp
patchwork/: CMakeLists.txt
patchwork/config/: params.yaml
patchwork/include/patchwork/: patch.h  patchwork.hpp
patchwork/launch/: evaluate_patchwork_kitti.launch  run_patchwork.launch  run_patchwork_kitti.launch
patchwork/nodes/: patch.cpp  ros_kitti.cpp  ros_kitti_publisher.cpp
